--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <a-scene
-        mindar-image="imageTargetSrc: ./targets.mind;"
+        mindar-image="imageTargetSrc: ./my-marker.mind;"
         vr-mode-ui="enabled: false"
         device-orientation-permission-ui="enabled: false"
         loading-screen="enabled: false"
@@ -317,4 +317,5 @@
 </body>
 </html>
 </html>
+
 
