--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Christmas AR scene with Santa flying over Earth">
     <title>🎄 Santa Over the World</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
-
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
-
     <style>
         html, body {
             margin: 0;
@@ -25,7 +22,6 @@
             font-family: 'Comic Neue', cursive, sans-serif;
             font-weight: 700;
         }
-
         a-scene {
             width: 100%;
             height: 100%;
@@ -34,7 +30,6 @@
             left: 0;
             background: transparent;
         }
-
         .arjs-loader {
             height: 100%;
             width: 100%;
@@ -54,14 +49,12 @@
             box-sizing: border-box;
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
         }
-
         @keyframes pulse {
             0% { transform: scale(1); }
             50% { transform: scale(1.1); }
             100% { transform: scale(1); }
         }
         .pulse { animation: pulse 1.5s infinite; }
-
         @keyframes glow {
             0% { opacity: 0.6; }
             50% { opacity: 1; }
@@ -70,7 +63,6 @@
         .glowing {
             animation: glow 1.5s infinite ease-in-out;
         }
-
         .controls {
             position: absolute;
             bottom: 20px;
@@ -82,7 +74,6 @@
             flex-wrap: wrap;
             justify-content: center;
         }
-
         .sound-btn, .etsy-btn, .lang-btn {
             padding: 10px 20px;
             border: none;
@@ -93,7 +84,6 @@
             font-weight: 700;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-
         .sound-btn { background-color: #4CAF50; color: white; }
         .sound-btn.off { background-color: #f44336; }
         .etsy-btn { background-color: #D42426; color: white; text-decoration: none; }
@@ -105,7 +95,6 @@
         <div class="pulse">🎄 Santa Over the World</div>
         <div style="margin-top: 20px; font-size: 1.2em;">Point your camera at the marker! 🎅🌍</div>
     </div>
-
     <a-scene
         mindar-image="imageTargetSrc: ./my-marker.mind;"
         vr-mode-ui="enabled: false"
@@ -120,9 +109,7 @@
             <img id="earth-texture" src="./earth.jpg">
             <img id="santa-sleigh-img" src="./santa-sleigh.png">
         </a-assets>
-
         <a-camera position="0 0 1.5" look-controls="enabled: false"></a-camera>
-
         <a-entity mindar-image-target="targetIndex: 0">
             <!-- Earth -->
             <a-sphere
@@ -139,8 +126,16 @@
                     repeat="indefinite"
                     easing="linear"
                 ></a-animation>
+                <!-- City lights for holiday sparkle -->
+                <a-entity id="city-lights">
+                    <a-sphere position="0.2 0.1 -0.3" radius="0.005" color="#ffff00" material="opacity: 0.8; transparent: true">
+                        <a-animation attribute="material.opacity" from="0.8" to="0.2" dur="1000" repeat="indefinite" direction="alternate"></a-animation>
+                    </a-sphere>
+                    <a-sphere position="-0.1 -0.2 0.2" radius="0.004" color="#ff00ff" material="opacity: 0.7; transparent: true">
+                        <a-animation attribute="material.opacity" from="0.7" to="0.1" dur="1500" repeat="indefinite" direction="alternate" delay="500"></a-animation>
+                    </a-sphere>
+                </a-entity>
             </a-sphere>
-
             <!-- Santa orbit -->
             <a-entity id="santa-orbit" position="0 0 -0.5">
                 <a-entity id="santa-container">
@@ -151,48 +146,63 @@
                         scale="0.4 0.4 0.4"
                         visible="true"
                     ></a-image>
-
-                    <!-- Magical glowing snow trail -->
+                    <!-- Magical glowing snow trail - extended and more colorful -->
                     <a-entity id="snow-trail" position="0 0.55 0.4">
                         <a-sphere class="glowing" radius="0.015" color="#ffffff" material="shader: flat; opacity: 0.9">
                             <a-animation attribute="position" to="0 -0.4 0" dur="1800" repeat="indefinite" easing="linear"></a-animation>
                             <a-animation attribute="scale" to="0.5 0.5 0.5" dur="1800" repeat="indefinite" easing="easeOutQuad"></a-animation>
                             <a-animation attribute="material.opacity" from="0.9" to="0" dur="1800" repeat="indefinite" easing="linear"></a-animation>
+                            <a-animation attribute="rotation" to="360 0 360" dur="1800" repeat="indefinite" easing="linear"></a-animation>
                         </a-sphere>
                         <a-sphere class="glowing" radius="0.012" color="#e0f7fa" position="0.05 0.05 0" material="shader: flat; opacity: 0.85">
                             <a-animation attribute="position" to="0.05 -0.35 0" dur="1600" repeat="indefinite" easing="linear"></a-animation>
                             <a-animation attribute="scale" to="0.4 0.4 0.4" dur="1600" repeat="indefinite" easing="easeOutQuad"></a-animation>
                             <a-animation attribute="material.opacity" from="0.85" to="0" dur="1600" repeat="indefinite" easing="linear"></a-animation>
+                            <a-animation attribute="rotation" to="360 0 360" dur="1600" repeat="indefinite" easing="linear"></a-animation>
                         </a-sphere>
                         <a-sphere class="glowing" radius="0.018" color="#bbdefb" position="-0.05 0.05 0" material="shader: flat; opacity: 0.95">
                             <a-animation attribute="position" to="-0.05 -0.45 0" dur="2000" repeat="indefinite" easing="linear"></a-animation>
                             <a-animation attribute="scale" to="0.6 0.6 0.6" dur="2000" repeat="indefinite" easing="easeOutQuad"></a-animation>
                             <a-animation attribute="material.opacity" from="0.95" to="0" dur="2000" repeat="indefinite" easing="linear"></a-animation>
+                            <a-animation attribute="rotation" to="360 0 360" dur="2000" repeat="indefinite" easing="linear"></a-animation>
                         </a-sphere>
                         <a-sphere class="glowing" radius="0.01" color="#ffffff" position="0.08 0.03 0" material="shader: flat; opacity: 0.8">
                             <a-animation attribute="position" to="0.08 -0.3 0" dur="1400" repeat="indefinite" easing="linear"></a-animation>
                             <a-animation attribute="scale" to="0.3 0.3 0.3" dur="1400" repeat="indefinite" easing="easeOutQuad"></a-animation>
                             <a-animation attribute="material.opacity" from="0.8" to="0" dur="1400" repeat="indefinite" easing="linear"></a-animation>
+                            <a-animation attribute="rotation" to="360 0 360" dur="1400" repeat="indefinite" easing="linear"></a-animation>
                         </a-sphere>
                         <a-sphere class="glowing" radius="0.016" color="#c8e6c9" position="-0.08 0.03 0" material="shader: flat; opacity: 0.9">
                             <a-animation attribute="position" to="-0.08 -0.4 0" dur="1900" repeat="indefinite" easing="linear"></a-animation>
                             <a-animation attribute="scale" to="0.55 0.55 0.55" dur="1900" repeat="indefinite" easing="easeOutQuad"></a-animation>
                             <a-animation attribute="material.opacity" from="0.9" to="0" dur="1900" repeat="indefinite" easing="linear"></a-animation>
+                            <a-animation attribute="rotation" to="360 0 360" dur="1900" repeat="indefinite" easing="linear"></a-animation>
+                        </a-sphere>
+                        <!-- Additional snowflakes for longer, more colorful trail -->
+                        <a-sphere class="glowing" radius="0.014" color="#f8bbd9" position="0.1 0.1 0" material="shader: flat; opacity: 0.9">
+                            <a-animation attribute="position" to="0.1 -0.5 0" dur="2100" repeat="indefinite" easing="linear"></a-animation>
+                            <a-animation attribute="scale" to="0.45 0.45 0.45" dur="2100" repeat="indefinite" easing="easeOutQuad"></a-animation>
+                            <a-animation attribute="material.opacity" from="0.9" to="0" dur="2100" repeat="indefinite" easing="linear"></a-animation>
+                            <a-animation attribute="rotation" to="360 0 360" dur="2100" repeat="indefinite" easing="linear"></a-animation>
+                        </a-sphere>
+                        <a-sphere class="glowing" radius="0.013" color="#fff59d" position="-0.1 0.08 0" material="shader: flat; opacity: 0.85">
+                            <a-animation attribute="position" to="-0.1 -0.42 0" dur="1700" repeat="indefinite" easing="linear"></a-animation>
+                            <a-animation attribute="scale" to="0.4 0.4 0.4" dur="1700" repeat="indefinite" easing="easeOutQuad"></a-animation>
+                            <a-animation attribute="material.opacity" from="0.85" to="0" dur="1700" repeat="indefinite" easing="linear"></a-animation>
+                            <a-animation attribute="rotation" to="360 0 360" dur="1700" repeat="indefinite" easing="linear"></a-animation>
                         </a-sphere>
                     </a-entity>
                 </a-entity>
             </a-entity>
         </a-entity>
     </a-scene>
-
     <div class="controls">
         <button id="sound-btn" class="sound-btn off">Turn Sound On</button>
         <a href="https://smartlessa.etsy.com" target="_blank" class="etsy-btn">Visit Etsy</a>
         <button id="lang-btn" class="lang-btn">🇺🇦 Українська</button>
     </div>
-
     <script>
-        // TOUCH GESTURES COMPONENT FOR PINCH & ROTATE
+        // TOUCH GESTURES COMPONENT FOR PINCH & ROTATE - enhanced with Santa scaling
         AFRAME.registerComponent('touch-gestures', {
             schema: {
                 minScale: { type: 'number', default: 0.2 },
@@ -205,6 +215,7 @@
                 this.startPos = { x: 0, y: 0 };
                 this.currentScale = 1;
                 this.planet = document.querySelector('#earth');
+                this.santa = document.querySelector('#santa-container');
                 this.el.addEventListener('touchstart', (e) => {
                     if (e.touches.length === 1) {
                         this.isRotating = true;
@@ -219,7 +230,6 @@
                         this.currentScale = this.planet.object3D.scale.x;
                     }
                 });
-
                 this.el.addEventListener('touchmove', (e) => {
                     e.preventDefault();
                     if (this.isPinching && e.touches.length === 2) {
@@ -230,20 +240,23 @@
                         const scaleFactor = currentDistance / this.initialDistance;
                         const newScale = Math.max(this.data.minScale, Math.min(this.data.maxScale, this.currentScale * scaleFactor));
                         this.planet.object3D.scale.set(newScale, newScale, newScale);
+                        // Scale Santa as well for better interaction
+                        const santaScale = Math.max(0.3, Math.min(1.5, this.currentScale * scaleFactor));
+                        if (this.santa) {
+                            this.santa.object3D.scale.set(santaScale, santaScale, santaScale);
+                        }
                     } else if (this.isRotating && e.touches.length === 1) {
                         const deltaX = (e.touches[0].pageX - this.startPos.x) * this.data.rotationSpeed;
                         this.planet.object3D.rotation.y += THREE.MathUtils.degToRad(deltaX);
                         this.startPos.x = e.touches[0].pageX;
                     }
                 });
-
                 this.el.addEventListener('touchend', () => {
                     this.isRotating = false;
                     this.isPinching = false;
                 });
             }
         });
-
         // LANGUAGE & LOGIC
         let isUkrainian = false;
         const translations = {
@@ -264,7 +277,6 @@
                 langBtn: "🇬🇧 English"
             }
         };
-
         function setLanguage(lang) {
             isUkrainian = (lang === 'uk');
             const t = translations[lang];
@@ -275,25 +287,21 @@
             langBtn.textContent = t.langBtn;
             document.documentElement.lang = lang;
         }
-
         function fixHeight() {
             document.body.style.height = window.innerHeight + 'px';
         }
         fixHeight();
         window.addEventListener('resize', fixHeight);
-
         const loader = document.querySelector('#loader');
         const targetEntity = document.querySelector('[mindar-image-target]');
         const bgMusic = document.querySelector('#bg-music');
         const soundBtn = document.querySelector('#sound-btn');
         const langBtn = document.querySelector('#lang-btn');
-
         // Santa animation
         const santaContainer = document.querySelector('#santa-container');
         let time = 0;
         const radius = 0.7;
         const heightOffset = 0.2;
-
         function animateSanta() {
             if (!santaContainer) return;
             time += 0.01;
@@ -305,7 +313,6 @@
             santaContainer.object3D.lookAt(0, 0, -0.5);
             requestAnimationFrame(animateSanta);
         }
-
         targetEntity.addEventListener('targetFound', () => {
             loader.style.display = 'none';
             if (bgMusic.paused) {
@@ -315,11 +322,9 @@
             }
             animateSanta();
         });
-
         targetEntity.addEventListener('targetLost', () => {
             loader.style.display = 'flex';
         });
-
         soundBtn.addEventListener('click', () => {
             if (bgMusic.paused) {
                 bgMusic.play().catch(e => console.log("🔇 Audio play error:", e));
@@ -331,11 +336,9 @@
                 soundBtn.textContent = isUkrainian ? translations.uk.soundOn : translations.en.soundOn;
             }
         });
-
         langBtn.addEventListener('click', () => {
             setLanguage(isUkrainian ? 'en' : 'uk');
         });
-
         setLanguage('en');
     </script>
 </body>
