--- a/index.html
+++ b/index.html
@@ -70,23 +70,29 @@
             transform: translateX(-50%);
             z-index: 10000;
             display: flex;
-            gap: 10px;
+            gap: 8px;
             flex-wrap: wrap;
             justify-content: center;
         }
         .sound-btn, .etsy-btn, .lang-btn {
-            padding: 10px 20px;
+            padding: 8px 12px;
             border: none;
-            border-radius: 15px;
+            border-radius: 50%;
             cursor: pointer;
             font-family: 'Comic Neue', cursive, sans-serif;
-            font-size: 1em;
+            font-size: 1.2em;
             font-weight: 700;
+            width: 45px;
+            height: 45px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-decoration: none;
         }
         .sound-btn { background-color: #4CAF50; color: white; }
         .sound-btn.off { background-color: #f44336; }
-        .etsy-btn { background-color: #D42426; color: white; text-decoration: none; }
+        .etsy-btn { background-color: #D42426; color: white; }
         .lang-btn { background-color: #1E88E5; color: white; }
     </style>
 </head>
@@ -135,30 +141,32 @@
                         <a-animation attribute="material.opacity" from="0.7" to="0.1" dur="1500" repeat="indefinite" direction="alternate" delay="500"></a-animation>
                     </a-sphere>
                 </a-entity>
-                <!-- Snow on poles - North Pole (top) -->
-                <a-entity id="north-pole-snow" position="0 0.4 0">
-                    <a-sphere position="0 0.1 0" radius="0.08" color="#ffffff" material="opacity: 0.9; transparent: true; shader: flat">
-                        <a-animation attribute="scale" from="1 1 1" to="1.05 1.05 1.05" dur="3000" repeat="indefinite" direction="alternate" easing="easeInOutSine"></a-animation>
-                        <a-animation attribute="material.opacity" from="0.9" to="0.7" dur="2000" repeat="indefinite" direction="alternate"></a-animation>
+                <!-- Clouds atmosphere around the whole sphere -->
+                <a-entity id="clouds">
+                    <a-sphere position="0.41 0 0" radius="0.03" color="#ffffff" material="opacity: 0.6; transparent: true; shader: flat">
+                        <a-animation attribute="scale" from="1 1 1" to="1.1 1.1 1.1" dur="4000" repeat="indefinite" direction="alternate" easing="easeInOutSine"></a-animation>
+                        <a-animation attribute="material.opacity" from="0.6" to="0.4" dur="3000" repeat="indefinite" direction="alternate" delay="1000"></a-animation>
                     </a-sphere>
-                    <a-sphere position="0.05 0.05 0.05" radius="0.04" color="#f0f8ff" material="opacity: 0.8; transparent: true; shader: flat">
-                        <a-animation attribute="scale" from="1 1 1" to="1.03 1.03 1.03" dur="2500" repeat="indefinite" direction="alternate" easing="easeInOutSine" delay="500"></a-animation>
+                    <a-sphere position="0.3 0.3 0.2" radius="0.025" color="#f0f8ff" material="opacity: 0.5; transparent: true; shader: flat">
+                        <a-animation attribute="scale" from="1 1 1" to="1.05 1.05 1.05" dur="3500" repeat="indefinite" direction="alternate" easing="easeInOutSine" delay="500"></a-animation>
                     </a-sphere>
-                    <a-sphere position="-0.03 0.08 -0.02" radius="0.035" color="#e6f3ff" material="opacity: 0.85; transparent: true; shader: flat">
-                        <a-animation attribute="scale" from="1 1 1" to="1.04 1.04 1.04" dur="3500" repeat="indefinite" direction="alternate" easing="easeInOutSine" delay="1000"></a-animation>
+                    <a-sphere position="-0.2 0.35 -0.1" radius="0.04" color="#e6f3ff" material="opacity: 0.7; transparent: true; shader: flat">
+                        <a-animation attribute="scale" from="1 1 1" to="1.08 1.08 1.08" dur="4500" repeat="indefinite" direction="alternate" easing="easeInOutSine"></a-animation>
                     </a-sphere>
-                </a-entity>
-                <!-- Snow on poles - South Pole (bottom) -->
-                <a-entity id="south-pole-snow" position="0 -0.4 0">
-                    <a-sphere position="0 -0.1 0" radius="0.07" color="#ffffff" material="opacity: 0.9; transparent: true; shader: flat">
-                        <a-animation attribute="scale" from="1 1 1" to="1.05 1.05 1.05" dur="3000" repeat="indefinite" direction="alternate" easing="easeInOutSine"></a-animation>
-                        <a-animation attribute="material.opacity" from="0.9" to="0.7" dur="2000" repeat="indefinite" direction="alternate"></a-animation>
+                    <a-sphere position="0.1 -0.2 0.35" radius="0.02" color="#ffffff" material="opacity: 0.55; transparent: true; shader: flat">
+                        <a-animation attribute="scale" from="1 1 1" to="1.03 1.03 1.03" dur="2500" repeat="indefinite" direction="alternate" easing="easeInOutSine" delay="1500"></a-animation>
                     </a-sphere>
-                    <a-sphere position="0.04 -0.06 0.03" radius="0.045" color="#f0f8ff" material="opacity: 0.8; transparent: true; shader: flat">
-                        <a-animation attribute="scale" from="1 1 1" to="1.03 1.03 1.03" dur="2500" repeat="indefinite" direction="alternate" easing="easeInOutSine" delay="700"></a-animation>
+                    <a-sphere position="-0.35 0 -0.25" radius="0.035" color="#f0f8ff" material="opacity: 0.65; transparent: true; shader: flat">
+                        <a-animation attribute="scale" from="1 1 1" to="1.06 1.06 1.06" dur="3800" repeat="indefinite" direction="alternate" easing="easeInOutSine"></a-animation>
                     </a-sphere>
-                    <a-sphere position="-0.05 -0.07 -0.04" radius="0.03" color="#e6f3ff" material="opacity: 0.85; transparent: true; shader: flat">
-                        <a-animation attribute="scale" from="1 1 1" to="1.04 1.04 1.04" dur="3500" repeat="indefinite" direction="alternate" easing="easeInOutSine" delay="1500"></a-animation>
+                    <a-sphere position="0.25 -0.3 0.1" radius="0.028" color="#e6f3ff" material="opacity: 0.5; transparent: true; shader: flat">
+                        <a-animation attribute="scale" from="1 1 1" to="1.04 1.04 1.04" dur="3200" repeat="indefinite" direction="alternate" easing="easeInOutSine" delay="2000"></a-animation>
+                    </a-sphere>
+                    <a-sphere position="-0.1 0.25 -0.3" radius="0.032" color="#ffffff" material="opacity: 0.6; transparent: true; shader: flat">
+                        <a-animation attribute="scale" from="1 1 1" to="1.07 1.07 1.07" dur="4200" repeat="indefinite" direction="alternate" easing="easeInOutSine" delay="800"></a-animation>
+                    </a-sphere>
+                    <a-sphere position="0.35 0.15 0.25" radius="0.022" color="#f0f8ff" material="opacity: 0.45; transparent: true; shader: flat">
+                        <a-animation attribute="scale" from="1 1 1" to="1.02 1.02 1.02" dur="2800" repeat="indefinite" direction="alternate" easing="easeInOutSine"></a-animation>
                     </a-sphere>
                 </a-entity>
             </a-sphere>
@@ -223,9 +231,9 @@
         </a-entity>
     </a-scene>
     <div class="controls">
-        <button id="sound-btn" class="sound-btn off">Turn Sound On</button>
-        <a href="https://smartlessa.etsy.com" target="_blank" class="etsy-btn">Visit Etsy</a>
-        <button id="lang-btn" class="lang-btn">🇺🇦 Українська</button>
+        <button id="sound-btn" class="sound-btn off" title="Sound">🔇</button>
+        <a href="https://smartlessa.etsy.com" target="_blank" class="etsy-btn" title="Etsy">🎁</a>
+        <button id="lang-btn" class="lang-btn" title="Language">🇺🇦</button>
     </div>
     <script>
         // TOUCH GESTURES COMPONENT FOR PINCH & ROTATE - enhanced with Santa scaling
@@ -292,7 +300,7 @@
                 loaderHint: "Point your camera at the marker! 🎅🌍",
                 soundOn: "Turn Sound On",
                 soundOff: "Turn Sound Off",
-                langBtn: "🇺🇦 Українська"
+                langBtn: "🇺🇦"
             },
             uk: {
                 title: "🎄 Санта над світом",
@@ -300,7 +308,7 @@
                 loaderHint: "Наведи камеру на маркер! 🎅🌍",
                 soundOn: "Увімкнути звук",
                 soundOff: "Вимкнути звук",
-                langBtn: "🇬🇧 English"
+                langBtn: "🇬🇧"
             }
         };
         function setLanguage(lang) {
@@ -309,9 +317,8 @@
             document.title = t.title;
             document.querySelector('.pulse').textContent = t.loaderMain;
             document.querySelector('.arjs-loader div[style]').textContent = t.loaderHint;
-            soundBtn.textContent = isUkrainian ? translations.uk.soundOn : translations.en.soundOn;
-            langBtn.textContent = t.langBtn;
             document.documentElement.lang = lang;
+            langBtn.textContent = t.langBtn;
         }
         function fixHeight() {
             document.body.style.height = window.innerHeight + 'px';
@@ -323,18 +330,87 @@
         const bgMusic = document.querySelector('#bg-music');
         const soundBtn = document.querySelector('#sound-btn');
         const langBtn = document.querySelector('#lang-btn');
-        // Santa animation
+        // Santa animation with occasional landing and gifts
         const santaContainer = document.querySelector('#santa-container');
         let time = 0;
         const radius = 0.7;
         const heightOffset = 0.2;
+        const earthRadius = 0.4;
+        let orbitCount = 0;
+        let isLanding = false;
+        let landingTime = 0;
+        const colors = ['#ff0000', '#00ff00', '#0000ff', '#ffff00', '#ff00ff', '#00ffff'];
+        function createGifts() {
+            for (let i = 0; i < 5; i++) {
+                const gift = document.createElement('a-box');
+                gift.setAttribute('color', colors[Math.floor(Math.random() * colors.length)]);
+                gift.setAttribute('width', 0.03);
+                gift.setAttribute('height', 0.03);
+                gift.setAttribute('depth', 0.03);
+                gift.setAttribute('position', `${(Math.random() - 0.5) * 0.1} 0 ${(Math.random() - 0.5) * 0.1}`);
+                gift.setAttribute('material', 'opacity: 0.9; transparent: true');
+                santaContainer.appendChild(gift);
+                // Animate gift flying out
+                gift.object3D.position.set(
+                    (Math.random() - 0.5) * 0.2,
+                    Math.random() * 0.1,
+                    (Math.random() - 0.5) * 0.2 - 0.1
+                );
+                gift.setAttribute('animation__move', {
+                    property: 'position',
+                    to: `${(Math.random() - 0.5) * 2} ${Math.random() * 0.5 - 0.2} ${(Math.random() - 0.5) * 2 - 0.5}`,
+                    dur: 1500 + Math.random() * 1000,
+                    easing: 'easeOutQuad'
+                });
+                gift.setAttribute('animation__rotate', {
+                    property: 'rotation',
+                    to: `0 ${360 * (Math.random() + 1)} 0`,
+                    dur: 1500 + Math.random() * 1000,
+                    easing: 'linear'
+                });
+                gift.setAttribute('animation__fade', {
+                    property: 'material.opacity',
+                    to: 0,
+                    dur: 2000,
+                    delay: 1000,
+                    easing: 'linear'
+                });
+                // Remove after animation
+                setTimeout(() => {
+                    if (gift.parentNode) {
+                        gift.parentNode.removeChild(gift);
+                    }
+                }, 3000);
+            }
+        }
         function animateSanta() {
             if (!santaContainer) return;
             time += 0.01;
             const angle = time * 0.5;
             const x = Math.sin(angle) * radius;
             const z = Math.cos(angle) * radius;
-            const y = Math.sin(time * 2) * 0.15 + heightOffset;
+            let y = Math.sin(time * 2) * 0.15 + heightOffset;
+            // Check for landing every full orbit (approx every 6.28 radians)
+            if (angle % (2 * Math.PI) < 0.1 && !isLanding) {
+                isLanding = true;
+                orbitCount++;
+                if (orbitCount % 3 === 0) { // Land every 3rd orbit
+                    // Lower to touch Earth
+                    y = earthRadius + 0.1; // Just above surface
+                    landingTime = time + 1; // Land for 1 second
+                    setTimeout(() => {
+                        createGifts(); // Gifts fly out!
+                    }, 500);
+                } else {
+                    isLanding = false;
+                }
+            }
+            if (isLanding && time < landingTime) {
+                y = earthRadius + 0.1; // Stay landed
+            } else {
+                isLanding = false;
+                y = Math.sin(time * 2) * 0.15 + heightOffset;
+            }
             santaContainer.object3D.position.set(x, y, z);
             santaContainer.object3D.lookAt(0, 0, -0.5);
             requestAnimationFrame(animateSanta);
@@ -344,7 +420,7 @@
             if (bgMusic.paused) {
                 bgMusic.play().catch(e => console.log("🔇 Audio play error:", e));
                 soundBtn.classList.remove('off');
-                soundBtn.textContent = isUkrainian ? translations.uk.soundOff : translations.en.soundOff;
+                soundBtn.textContent = '🔊';
             }
             animateSanta();
         });
@@ -355,11 +431,11 @@
             if (bgMusic.paused) {
                 bgMusic.play().catch(e => console.log("🔇 Audio play error:", e));
                 soundBtn.classList.remove('off');
-                soundBtn.textContent = isUkrainian ? translations.uk.soundOff : translations.en.soundOff;
+                soundBtn.textContent = '🔊';
             } else {
                 bgMusic.pause();
                 soundBtn.classList.add('off');
-                soundBtn.textContent = isUkrainian ? translations.uk.soundOn : translations.en.soundOn;
+                soundBtn.textContent = '🔇';
             }
         });
         langBtn.addEventListener('click', () => {
